--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -112,7 +112,7 @@
  </ya-tr-span><ya-tr-span data-index="43-1" data-value="used by the app
  " data-translation="используется приложением
  " data-type="trSpan">используется приложением
- </ya-tr-span></p> <ul><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://www.appodeal.com/home/privacy-policy/" target="_blank"><ya-tr-span data-index="110-0" data-value="Appodeal" data-translation="Апподеал" data-type="trSpan">Апподеал</ya-tr-span></a></li><!----><!----><!----><!----></ul></div> <p><strong><ya-tr-span data-index="45-0" data-value="Log Data" data-translation="каротажные данные" data-type="trSpan">каротажные данные</ya-tr-span></strong></p> <p><ya-tr-span data-index="46-0" data-value="
+ </ya-tr-span></p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank"><ya-tr-span data-index="45-0" data-value="Google Play Services" data-translation="Сервисы Google Play" data-type="trSpan">Сервисы Google Play</ya-tr-span></a></li><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://www.appodeal.com/home/privacy-policy/" target="_blank"><ya-tr-span data-index="109-0" data-value="Appodeal" data-translation="Апподеал" data-type="trSpan">Апподеал</ya-tr-span></a></li><!----><!----><!----><!----></ul></div> <p><strong><ya-tr-span data-index="46-0" data-value="Log Data" data-translation="каротажные данные" data-type="trSpan">каротажные данные</ya-tr-span></strong></p> <p><ya-tr-span data-index="47-0" data-value="
  We want to inform you that whenever
  " data-translation="
  Мы хотим сообщить вам, что всякий раз, когда
@@ -340,3 +340,4 @@
  </ya-tr-span><a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank"><ya-tr-span data-index="69-3" data-value="App Privacy Policy Generator" data-translation="Генератор Политики Конфиденциальности Приложений" data-type="trSpan">Генератор Политики Конфиденциальности Приложений</ya-tr-span></a></p>
     </body>
     </html>
+      
